fix(Policy): PolicyEngine validates against current request user.